# optaimi-pulse-app

./: .gitignore  .gitmodules  .replit  CHANGELOG.md  REPLIT_AUTH_MIGRATION.md  alert_scheduler.py  create-replit-auth-schema.sql  drizzle.config.ts  main.py  middleware.ts  migrate-to-replit-auth.sql  next.config.ts  package-lock.json  package.json  postcss.config.js  pyproject.toml  replit.md  scheduler.py  tailwind.config.mjs  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/alerts/: alert-form.tsx  alerts-content.tsx  page.tsx
app/api/alerts/: route.ts
app/api/callback/: route.ts
app/api/history/: route.ts
app/api/login/: route.ts
app/api/logout/: route.ts
app/dashboard/: page.tsx
app/hooks/: useAuth.ts
app/reset-password/: page.tsx
app/signin/: page.tsx
app/signup/: page.tsx
attached_assets/: Pasted-Project-Optaimi-Pulse-Next-js-15-FE-on-5000-FastAPI-BE-on-8000-Replit-SQL-PG-Mid-build-Br-1759907566786_1759907566787.txt  Pasted-Project-Optaimi-Pulse-Next-js-15-FE-on-5000-FastAPI-BE-on-8000-Replit-SQL-PG-Mid-build-Mod-1759907645845_1759907645845.txt  Pasted-Project-Optaimi-Pulse-Next-js-15-FastAPI-Mid-build-Branch-pulse-fix-charts-cost-cleanup-Mo-1759914933103_1759914933103.txt  Pasted-Project-Optaimi-Pulse-Next-js-App-Router-FastAPI-SQL-Mid-build-Branch-pulse-alerts-auth-l-1759923145325_1759923145326.txt
components/: PerformanceChart.tsx
lib/: auth.ts  email.ts  session.ts
server/: auth-adapter.ts  auth-server.ts  db.ts  email.ts  replitAuth.ts  storage.ts
shared/: schema.ts
styles/: globals.css
types/: next-auth.d.ts
(+13 files in other folders)
