[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69.0",
    "fastapi>=0.118.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "openai>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "uvicorn[standard]>=0.37.0",
]
